<!--
# 📄 Dosya Yolu: C:/Projects/TelefonRehberi/mobile/android/app/src/main/res/values/strings.xml
# 📌 Amac: Android uygulamasinda gorunen tum statik metinleri merkezi resource katmaninda tutar.
# 📌 Language - XML
# Version: 1.1.1
# Aciklama: Mobil senkron ekran basliklari, alan ipuclari, butonlar ve durum metnini tanimlar; Android resource apostrof kacisini duzeltir.
# Bagimli Oldugu Katman: Language
-->
<resources>
    <string name="app_name">Turkuaz Telefon Rehberi</string>
    <string name="sync_title">Turkuaz Telefon Rehberi - Mobil Senkron</string>
    <string name="server_url_hint">http://192.168.1.10:8787</string>
    <string name="sync_token_hint">Senkron tokeni</string>
    <string name="test_connection">Baglantiyi Test Et</string>
    <string name="pull_contacts">PC Rehberini Telefona Al</string>
    <string name="push_contacts">Telefon Rehberini PC\'ye Gonder</string>
    <string name="ready">Hazir</string>
</resources>
